# pwncore

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  OVERVIEW.md  README.md  app.py  config.py  conftest.py  docker-compose.yaml  docs.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: ghcr.yml  pytest.yml  tox.yml
routes/: __init__.py  team.py
routes/ctf/: __init__.py  start.py
src/pwncore/: __init__.py  __main__.py  admin_app.py  config.py  container.py  containerASD.py  db.py  docs.py  types.py
src/pwncore/db/: __init__.py
src/pwncore/models/: __init__.py  container.py  ctf.py  meta.py  powerups.py  pre_event.py  round2.py  statusCode_models.py  user.py
src/pwncore/models/responseModels/: CTF_StatusResponse.py  adminResponse.py  ctf_ContainerStatusResponse.py  leaderboard_response.py  preEventCTF_response.py  teamAuthResponse.py  teamManagementResponse.py  userManagementResponse.py
src/pwncore/routes/: __init__.py  admin.py  admin_dashboard.py  api.py  auth.py  leaderboard.py  powerups.py  round2.py  team.py
src/pwncore/routes/ctf/: __init__.py  pre_event.py  response_models.py  start.py
tests/: login.py  test_login.py
