[tool.poetry]
name = "pwncore"
version = "0.1.0"
description = "The backend for an advanced CTF platform"
authors = ["LUGVITC"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[[tool.poetry.packages]]
include = "pwncore"
from = "src"

# Format to add new packages to the wheel
# [[tool.poetry.packages]]
# include = "new_package_or_maybe_script?"
# from = "src"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
httpx = "^0.25.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
